infra/k8s/onboarding/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: junyoung-service
  namespace: onboarding
spec:
  selector:
    app: junyoung-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
  type: ClusterIP
